🔒 Enhanced Security: Implement data encryption, input validation, XSS protection, and security dashboard

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 
         <div class="todo-stats">
             <span id="todoCount">0 items left</span>
+            <button id="securitySettings" class="btn btn-secondary" style="margin-left: 15px;">
+                <i class="fas fa-shield-alt"></i> Security
+            </button>
         </div>
 
         <ul id="todoList" class="todo-list">
@@ -62,6 +65,49 @@
             <div class="modal-footer">
                 <button class="btn btn-secondary" id="cancelEdit">Cancel</button>
                 <button class="btn btn-primary" id="saveEdit">Save</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Security Settings Modal -->
+    <div id="securityModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3><i class="fas fa-shield-alt"></i> Security Settings</h3>
+                <button class="close-btn" id="closeSecurityModal">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="security-info">
+                    <h4>Data Protection Status</h4>
+                    <div class="security-status">
+                        <div class="status-item">
+                            <i class="fas fa-lock"></i>
+                            <span>Data Encryption: <strong>Enabled</strong></span>
+                        </div>
+                        <div class="status-item">
+                            <i class="fas fa-shield-alt"></i>
+                            <span>Input Validation: <strong>Active</strong></span>
+                        </div>
+                        <div class="status-item">
+                            <i class="fas fa-ban"></i>
+                            <span>XSS Protection: <strong>Enabled</strong></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="security-actions">
+                    <h4>Data Management</h4>
+                    <button id="exportData" class="btn btn-secondary">
+                        <i class="fas fa-download"></i> Export Data
+                    </button>
+                    <button id="clearAllData" class="btn btn-danger">
+                        <i class="fas fa-trash"></i> Clear All Data
+                    </button>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-primary" id="closeSecurityBtn">Close</button>
             </div>
         </div>
     </div>
